--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_footer-default.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_footer-default.scss
@@ -1,59 +1,9 @@
-
-
-/*==========  m-work-w-us-container  ==========*/
-.work-w-us-container{
-	background-color: $grayDarker;
-	color: $grayLighter;
-	padding: 3em 0.9375em;
-	h2{
-		color: $grayLighter;
-		text-transform: uppercase;
-		margin-top: 0;
-	}
-	a{
-		color: $grayLight;
-		&:hover{
-			color: $white;
-		}
-	}
-}
-
-.work-w-us-prose,
-.work-w-us-contact{
-	@extend .left;
-	padding: 0 0.9375em 0 0;
-}
-
-.work-w-us-prose-invite{
-	display: block;
-}
-
-.work-w-us-contact{
-	padding-top: 0.4em;
-}
-.contact-us-list{
-	@extend .clearfix;
-	line-height: 2em;
-	
-	li {
-		float: left;
-		margin-left: 1em;
-	
-		&:first-child{
-			margin-left: 0;
-		}
-	}
-}
-
 .contact-list-footer {
 	[class*="icon-"]:before {
-		margin-right: 0.5em;		
+		margin-right: 0.4em;		
 		display: inline-block;
 		text-align: center;
 		width: 1em;
-	}
-	.icon-twitter:before {
-		margin-right: 0.4em;
 	}
 	.icon-facebook:before {
 		margin-right: 0.1em;
@@ -69,7 +19,7 @@
 	}
 }
 
-/*==========  site colophon with copy/credits and legal  ==========*/
+// /*==========  site colophon with copy/credits and legal  ==========*/
 
 .site-footer{
 	background-color: $black;
@@ -77,15 +27,15 @@
 	padding: 2em 0;
 	line-height: 1.25em;
 	font-size: 0.8em;
+	text-align: center;
 	a{
 		color: $grayLight;
+		&:hover{
+			border-bottom-color: $grayLight;
+		}
 	}
 }
 
 .copy_and_credits{
 	font-family: $sansFontFamilyLight;
-	// text-transform: uppercase;
-}
-
-.svg .credits [data-icon]:before {
 }
