adds an aside cont footer

--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
@@ -92,6 +92,12 @@
 
 /*-----  End of INTERVIEW LAYOUT  ------*/
 
+.socialize{
+	@extend .clearfix;
+	margin-bottom: 0;
+	background-color: $grayLighter;
+	padding: 1.25em;
+}
 
 
 @media screen and (min-width: 600px){
