--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_layout.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_layout.scss
@@ -15,16 +15,20 @@
 	padding-top: 2em;
 }
 
-.main-content-wrapper{
+.inside-wrapper{
 	width: 100%;
 	max-width: $large-screen;
 	margin: 0 auto;
 	padding: 0 0.5em;
-	// background-color: rgba($yellow, 0.2);
 }
 
 .main-content{
 	@extend .row;
+}
+
+.content{
+	@extend .clearfix;
+	@extend .inside-wrapper;
 }
 
 aside.side-info {
